// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`globalAlert > renders correctly with all variants > renders correctly variant danger 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="danger"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant info 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="info"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with all variants > renders correctly variant promotional 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="promotional"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with buttonText and onClickButton 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="info"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Sample GlobalAlert
        </p>
        <button
          class="styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_white__e1wcoef styles_undefined_compound_8__e1wcoet"
          type="button"
        >
          Button
        </button>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with children as component 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="info"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with closable and onClose 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="info"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Sample GlobalAlert
        </p>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-6:hover,
.emotion-6:focus,
.emotion-6:active {
  background: none;
}

.emotion-8 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-8 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="info"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          Simple GlobalAlert
        </p>
      </div>
      <button
        class="emotion-6 emotion-7 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-8 emotion-9"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`globalAlert > renders correctly with link 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
}

.emotion-0[data-variant='info'] {
  background-color: #0078d2;
}

.emotion-0[data-variant='danger'] {
  background-color: #e51963;
}

.emotion-0[data-variant='promotional'] {
  background: linear-gradient(151deg, #03cfda 0%, #3d1862 28.91%, #151a2d 75.01%);
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-4 {
  color: #ffffff;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-6 .e1afnb7a3,
.emotion-6 .e1afnb7a2,
.emotion-6 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-6>* {
  pointer-events: none;
}

.emotion-6:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-6:hover,
.emotion-6:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.emotion-6:hover .e1afnb7a3,
.emotion-6:focus .e1afnb7a3,
.emotion-6:hover .e1afnb7a2,
.emotion-6:focus .e1afnb7a2,
.emotion-6:hover .e1afnb7a4,
.emotion-6:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-6:hover:visited,
.emotion-6:focus:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-6[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-6:hover::after,
.emotion-6:focus::after {
  background-color: #005da3;
}

.emotion-6:active {
  text-decoration-thickness: 2px;
}

.emotion-8 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-8:hover,
.emotion-8:focus,
.emotion-8:active {
  background: none;
}

.emotion-8 {
  background: none;
  position: absolute;
  right: 3rem;
}

.emotion-8:hover,
.emotion-8:focus,
.emotion-8:active {
  background: none;
}

.emotion-10 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-10 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-10 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-10 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-variant="info"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <p
          class="emotion-4 emotion-5"
        >
          This is a 
          <a
            class="emotion-6 emotion-7"
            data-variant="inline"
            href="scaleway.com"
            prominence="strong"
            variant="bodySmallStrong"
          >
            Global Alert
          </a>
            link
        </p>
      </div>
      <button
        class="emotion-8 emotion-9 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
        type="button"
      >
        <svg
          class="emotion-10 emotion-11"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
